--- a/app/public/index.html
+++ b/app/public/index.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<link rel="icon" href="<%= BASE_URL %>favicon.ico" />
 		<link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap" rel="stylesheet" />
-		<title><%= htmlWebpackPlugin.options.title %></title>
+		<title>My Daily Affirmation: CatFirmations</title>
 	</head>
 	<body>
 		<noscript>
 			<strong
-				>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript
-				enabled. Please enable it to continue.</strong
+				>We're sorry but My Daily Affirmation doesn't work properly without JavaScript enabled. Please enable it
+				to continue.</strong
 			>
 		</noscript>
 		<div id="app"></div>
