--- a/app/public/index.html
+++ b/app/public/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<link rel="icon" href="<%= BASE_URL %>favicon.ico" />
 		<link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap" rel="stylesheet" />
-		<title>My Daily Affirmation: CatFirmations</title>
+		<title>My Daily Affirmation</title>
 	</head>
 	<body>
 		<noscript>
